# Modeling-Myelin-FC

./: .gitignore  CITATION.cff  README.md
data/: edges_fc_BOLDin.csv
data/schaefer-200_group/: commit.mat  edgelength.mat  euclideandist.mat  fc_BOLDin.mat  fc_meg.npy.mat  mtsat.mat  sa_axis.mat
data/schaefer-400_group/: commit.mat  edgelength.mat  euclideandist.mat  fc_BOLDin.mat  mtsat.mat  streamlinecount.mat
matlab/: main.m  mk_edgescsv_from_mat.m  run_all_modalities.m
matlab/+config/: default_config.m
matlab/+io/: load_inputs.m
matlab/+metrics/: compute_bin_correlations.m
matlab/+models/: dominance_interaction.m  fit_models.m  fit_models_binned.m
matlab/+prep/: build_design_table.m
matlab/+util/: ensure_dir.m  get_level_name.m  sanitize_label.m  save_struct_by_level.m
python/: setup.cfg
python/examples/: README.md
python/myelinfccoupling/: __init__.py  binning.py  cli.py  config.py  io.py  model.py  util.py
