[metadata]
name = myelinfccoupling
version = 0.1.0
author = Mark C Nelson
description = Myelin–FC coupling analysis (Python companion)
license = MIT
[options]
packages = find:
install_requires =
    pandas>=2.0
    numpy>=1.24
    statsmodels>=0.14
    scipy>=1.11
    click>=8.0
[options.entry_points]
console_scripts =
    myelin-fc-run = myelinfccoupling.cli:main
